--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ var/
 .idea/
 .installed.cfg
 *.egg
+*.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
